Inclusão de nova seção
Seção "Cielo Store" incluída na documentação

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1423,3 +1423,195 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcial:
 
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
+
+# Cielo Store
+
+## Sobre
+
+A Cielo Store é a loja de aplicativos da Cielo LIO.
+
+Foi um ambiente criado para parceiros, empresas de software e desenvolvedores possam criar seus aplicativos, publicar e disponibilizar seus aplicativos na Cielo Store para serem utilizados por clientes que usam a plataforma Cielo LIO.
+
+Os lojistas poderão acessar a Cielo Store por meio da Cielo LIO e fazer download dos aplicativos que melhor atendem seu modelo de negócio e que têm por objetivo facilitar a gestão e controle de suas vendas, melhorar o relacionamento deles com seus clientes e impulsionar suas vendas
+
+Os desenvolvedores poderão acessar o Dev Console para fazer a publicação de seus aplicativos e disponibilizar na Cielo Store.
+
+## Arquitetura
+
+Para entender a arquitetura da Cielo Store é necessário entender os 3 conceitos abaixo:
+
+* **Dev Console**
+ Ambiente exclusivo para o desenvolvedor fazer o upload dos seus aplicativos.
+ [Saiba mais](https://developercielo.github.io/manual/cielo-lio#dev-console)
+
+* **Aplicativo Próprios**
+ Aplicativos desenvolvidos para serem distribuídos a clientes específicos. Os aplicativos próprios não estarão disponíveis para download na Cielo Store.
+ [Saiba mais](https://developercielo.github.io/manual/cielo-lio#aplicativos-próprios)
+
+* **Loja Privada**
+ Modelo específico utilizado para distribuição de aplicativos próprios para os lojistas.
+ [Saiba mais](https://developercielo.github.io/manual/cielo-lio#loja-privada)
+
+* **Aplicativos Públicos**
+ Aplicativos desenvolvidos para serem disponibilizados na loja de aplicativo Cielo Store. Esses aplicativos poderão ser baixados por estabelecimentos comerciais (lojistas) acessando a Cielo Store via Cielo LIO.
+ [Saiba mais](https://developercielo.github.io/manual/cielo-lio#aplicativos-públicos)
+
+## Dev Console
+
+### Sobre
+
+O Dev Console é o ambiente exclusivo para o desenvolvedor realizar o upload e gestão dos aplicativos desenvolvidos para a Cielo LIO.
+
+No Dev Console o desenvolvedor consegue visualizar todos os seus aplicativos publicados sejam eles aplicativos próprios ou públicos.
+
+Acesse agora o Dev Console: https://www.cieloliostore.com.br
+
+### Status de um aplicativo
+
+Todos os aplicativos publicados no Dev Console possuem os seguintes status:
+
+**1 - Desenvolvimento**
+
+Nesse estágio o desenvolvedor consegue realizar testes do seu aplicativo em uma Cielo LIO. E caso precise fazer alguma correção, basta publicar uma nova versão do aplicativo pelo Dev Console e então atualizar na Cielo LIO.
+
+Para obter uma LIO durante o desenvolvimento, o desenvolvedor pode se credenciar na Cielo e solicitar uma Cielo LIO. Após o recebimento da LIO, basta solicitar a habilitação para LIO de Dev.
+
+[Saiba mais](https://developercielo.github.io/manual/cielo-lio#lio-para-desenvolvedores)
+
+**2 - Certificação**
+
+Uma vez concluído os testes o desenvolvedor envia o aplicativo para Certificação. Nessa etapa o time da Ceritficação da Cielo entra em ação e irá validar o fluxo de funcionamento do aplicativo principalmente nas etapas integradas ao pagamento.
+
+[Saiba mais](https://developercielo.github.io/manual/cielo-lio#promover-aplicativo-para-produção)
+
+**2 - Produção**
+
+Assim que o aplicativo for aprovado na certificação, o desenvolvedor poderá promover para produção.
+
+[Saiba mais](https://developercielo.github.io/manual/cielo-lio#certificação-de-aplicativos)
+
+No caso de Aplicativo Público em produção este estará disponpivel para download na Cielo Store
+
+[Saiba mais](https://developercielo.github.io/manual/cielo-lio#aplicativos-públicos)
+
+No caso de Aplicativo Próprio o desenvolvedor deverá solicitar a distribuição para as LIOs que devem receber seu aplicativo. 
+
+[Saiba mais](https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-póprios)
+
+### LIO para Desenvolvedores
+
+Os desenvolvedores que desejam obter uma Cielo LIO, podem se credenciar na Cielo e solicitar o equipamento. Todo esse procedimento pode ser realizados via [site da Cielo](www.cielo.com.br).
+
+Após o recebimento da Cielo LIO, o desenvolvedor deve entrar em contato via canal do Portal de Desenvolvedores e solicitar a habilitação de sua LIO para LIO de Dev preenchendo as informações necessárias.
+
+*É preciso ter uma conta criado no Dev Console para fazer essa solicitação*.
+
+Nosso time irá realizar os procedimentos necessários e então, todos os aplicativos publicados pelo desenvolvedor que estejam no status de Desenvolvimento poderão ser baixados em sua Cielo LIO de desenvolvimento. 
+
+[CLIQUE AQUI](https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev) para solicitar a habilitação de sua LIO para LIO de Dev.
+
+### Loja Privada
+
+A loja privada foi um modelo criado para permitir a distribuição dos aplicativos próprios desenvolvidos pelo parceiro. É necessário solicitar a criação da Loja Privada para então ser possível fazer o upload de um aplicativo próprio no Dev Console.
+
+[CLIQUE AQUI](https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev) para solicitar a criação da Loja Privada.
+
+A partir da Loja Privada criada, o desenvolvedor poderá publicar seu aplicativo no Dev Console selecionando sua loja privada.
+
+A loja privada é essencial para realizar a distribuição de aplicativos próprios lojistas específicos.
+
+[SAIBA MAIS](https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios)
+
+### Certificação de Aplicativos
+
+O objetivo da certificação de aplicativos é garantir que todos os aplicativos presentes na plataforma Cielo LIO, sejam próprios ou públicos, estejam de acordo com as regras e critérios estabelecidos pela Cielo.
+
+A certificação de aplicativos da Cielo LIO visa garantir os seguintes pontos:
+
+* Fluxo de pagamento funcione corretamente
+* Os conteúdos no aplicativos não violem as regras da Cielo
+* Os SKUs dos produtos são enviados corretamente
+* Informações para vitrine da Cielo Store estejam preenchidas corretamente, exclusivo para aplicativos públicos
+
+### Promover Aplicativo para Produção
+
+Assim que o aplicativo for aprovado na certificação, o desenvolvedor receberá um e-mail de notificação e então, deverá promover seu aplicativo para produção de forma que este fique:
+
+* Disponível para download na Cielo Store (Aplicativo Público) 
+* Disponível para distribuição à lojistas específicos (Aplicativo Próprio)
+
+### Mensagens de Erro
+
+A tabela apresenta os possíveis erros que o desenvolvedor pode encontrar durante a utilização do Dev Console:
+
+| Referência                                                              | Mensagem                                                                                                                                                                                  | Cenário                                                                                                                                                       | O que fazer?                                                                           |
+|-------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------|
+| APP CREATED_ERROR                                                       | Aplicativo com esse package name já existe                                                                                                                                                | Desenvolvedor tentou enviar uma aplicação com package name já existente na loja.                                                                              | Alterar no arquivo Manifest o packageName da aplicação                                 |
+| APP APK_PARSER_ERROR                                                    | O arquivo .apk é obrigatório                                                                                                                                                              | Desenvolvedor tentou executar o upload de uma aplicação e não anexou o arquivo .apk                                                                           | Clicar no botão "Adicione um APK" e certificar de que foi escolhido o arquivo correto. |
+| APP APK_PARSER_ERROR                                                    | Não foi possível obter o atributo Name / Não foi possível obter o atributo Package Name / Não foi possível obter o atributo Version Name / Não foi possível obter o atributo Version Code | Desenvolvedor tentou executar o upload de uma aplicação onde o arquivo manifest ou o apk está corrompido ou com problemas na configuração do arquivo manifest | Rebuildar o apk e verificar se não existem erros no arquivo Manifest do Android        |
+| SCREENSHOTS CREATED_WARNING                                             | Aplicativo criado, porém as screenshots não foram salvas!                                                                                                                                 | Na criação do app, o Desenvolvedor enviou screenshots onde os arquivos de imagem contém extensões incomuns ou desconhecidas.                                  | Editar o app e enviar arquivos de imagens com extensões conhecidas.                    |
+| SCREENSHOTS UPDATED_WARNING                                             | Aplicativo atualizado, porém as screenshots não foram salvas!                                                                                                                             | Na edição do app, o Desenvolvedor enviou screenshots onde os arquivos de imagem contém extensões incomuns ou desconhecidas.                                   | Editar novamente o app e enviar arquivos de imagens com extensões conhecidas.          |
+| VERSION PROMOTE_ERROR (esse cenário só ocorre com aplicativos públicos) | É necessário um EC cadastrado para promover essa versão para produção.                                                                                                                    | Após a aplicação ter tido a certificação aprovada, o Desenvolvedor tentou promover o app para produção, porém ainda não possui um EC.                         | Solicitar à Cielo a criação de um EC para poder promover a aplicação para promoção.    |
+
+Caso você desenvolvedor não encontre o erro nesta tabela, abra um ticket para a equipe de suporte reportando o problema encontrado e lembre-se de listar as evidências do erro como prints de tela e mensagens de erro recebidas.
+
+[CLIQUE AQUI](https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev)
+
+## Aplicativos Próprios
+
+Os aplicativos próprios atendem especificamente aqueles desenvolvedores que desejam disponibilizar seu aplicativo apenas para alguns lojistas específicos. O aplicativo próprio não é disponibilizado na Cielo Store e nem utilizado por outros lojistas que não tenham sido solicitados pelo desenvolvedor.
+
+Para conhecer mais sobre o modelo de distribuição de aplicativos próprios, [CLIQUE AQUI](https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios)
+
+### Upload de novos Aplicativos Próprios e novas versões
+
+Para realizar o upload de novos aplicativos próprios, acesse o Dev Console e adicione um novo aplicativo selecionando a opção de loja privada e em seguida selecione a loja privada referente a sua empresa.
+
+Caso o desenvolvedor esteja realizando uma alteração ou atualização no aplicativo próprio, o desenvolvedor deverá fazer o upload de uma nova versão do aplicativo. Para isso clique em Detalhes do seu aplicativo e inicie o procedimento para adicionar uma nova versão.
+
+Para enviar uma nova versão do aplicativo é obrigatório que:
+
+* Garantir que a versão mais recente do aplicativo esteja com o mesmo package name da versão anterior;
+
+* Alterar o “version code” e o “version name” dentro do arquivo manifest do aplicativo.
+
+### Distribuição de Aplicativos Próprios
+
+Aqueles desenvolvedores que optarem por desenvolver aplicativos próprios e distribuir apenas para lojistas específicos devem solicitar via canal do Portal de Desenvolvedores informando quais os números ECs (número com 16 dígitos) e lógicos das LIOs que devem receber o aplicativo.
+
+[CLIQUE AQUI](https://desenvolvedores.cielo.com.br/api-portal/content/ajuda-dev) para solicitar a distribuição de seu aplicativo.
+
+### Download de Aplicativo Próprios na Cielo LIO
+
+Para realizar o download de aplicativos próprios na Cielo LIO, execute o seguinte procedimento
+
+Clique na aba Ajuda -> Minha LIO -> Buscar atualizações 
+
+## Aplicativos Públicos
+
+Os aplicativos públicos são indicados para aqueles desenvolvedores e parceiros que desejam disponibilizar e escalar sua aplicação e permitir o download em todas os equipamentos de Cielo LIO distribuídos nos estabelecimentos comerciais (lojistas) no Brasil via aplicativo da Cielo Store.
+
+Para conhecer mais sobre a Cielo Store, [CLIQUE AQUI](https://developercielo.github.io/manual/cielo-lio#cielo-store)
+
+### Upload de novos Aplicativos Públicos e novas versões
+
+Para realizar o upload de novos aplicativos públicos, acesse o Dev Console e adicione um novo aplicativo selecionando a opção de loja pública e em seguida selecione o arquivo do aplicativo.
+
+Caso o desenvolvedor esteja realizando uma alteração ou atualização no aplicativo público, o desenvolvedor deverá fazer o upload de uma nova versão do aplicativo. Para isso clique em Detalhes do seu aplicativo e inicie o procedimento para adicionar uma nova versão.
+
+Para enviar uma nova versão do aplicativo é obrigatório que:
+
+* Garantir que a versão mais recente do aplicativo esteja com o mesmo package name da versão anterior;
+
+* Alterar o “version code” e o “version name” dentro do arquivo manifest do aplicativo.
+
+### Aplicativos Públicos na Cielo Store
+
+Assim que o aplicativo público for certificado, o desenvolvedor deverá promover para produção seu aplicativo e a partir desse momento este será adicionado na vitrine da Cielo Store e disponível para download via Cielo LIO.
+
+Ou seja, estabelecimentos comerciais (lojistas) poderão acessar a Cielo Store via Cielo LIO, realizar o download de sua aplicação e então começar a utilização.
+
+### Download de Aplicativo Públicos na Cielo LIO
+
+Para realizar o download de aplicativos públicos na Cielo LIO, execute o seguinte procedimento
+Clique na aba Apps -> Clique no aplicativo Cielo Store -> Escolha o aplicativo que deseja realizar o download
