Correção de link
"https://www.cielo.com.br" na seção "Cielo Store"

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1500,7 +1500,7 @@ No caso de Aplicativo Próprio o desenvolvedor deverá solicitar a distribuiçã
 
 ### LIO para Desenvolvedores
 
-Os desenvolvedores que desejam obter uma Cielo LIO, podem se credenciar na Cielo e solicitar o equipamento. Todo esse procedimento pode ser realizados via [site da Cielo](www.cielo.com.br).
+Os desenvolvedores que desejam obter uma Cielo LIO, podem se credenciar na Cielo e solicitar o equipamento. Todo esse procedimento pode ser realizados via [site da Cielo](https://www.cielo.com.br/).
 
 Após o recebimento da Cielo LIO, o desenvolvedor deve entrar em contato via canal do Portal de Desenvolvedores e solicitar a habilitação de sua LIO para LIO de Dev preenchendo as informações necessárias.
 
