--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -458,8 +458,7 @@ O Card é uma representação do cartão que foi utilizado para realizar o pagam
 |Campo|Tipo|Descrição|Obrigatório|
 |-----|----|---------|-----------|
 |brand|Texto|Bandeira do cartão (VISA e MASTER).|Sim|
-|bin|Número|Bin (primeiros 6 dígitos) do cartão.|Sim|
-|last|Número|Last (últimos 4 dígitos) do cartão.|Sim|
+|mask|Número|Número do cartão mascarado|Sim|
 
 #### Payment Product
 
@@ -468,19 +467,9 @@ Ex.: Crédito, Débito, etc.
 
 |Campo|Tipo|Descrição|Obrigatório|
 |-----|----|---------|-----------|
-|number|Texto|Identificação numérica do produto primário da Cielo.|Sim|
-|name|Número|Nome do produto primário utilizado.|Sim|
-|sub|Número|Produto secundário.|Sim|
-
-#### Sub Payment Product
-
-O Sub Payment Product é uma representação com o complemento da forma de pagamento utilizada para realizar um pagamento.
-Ex.: À Vista, Parcelado, etc.
-
-|Campo|Tipo|Descrição|Obrigatório|
-|-----|----|---------|-----------|
-|number|Texto|Identificação numérica do produto primário da Cielo.|Sim|
-|name|Número|Nome do produto primário utilizado.|Sim|
+|primary_product_name|Texto|Forma de pagamento (CREDITO ou DEBITO)|Sim|
+|secondary_product_name|Texto|Tipo de pagamento (A VISTA, PARCELADO LOJA ou PARCELADO ADM)|Sim|
+|number_of_quotas|Número|Número de parcelas (0 para pagamentos à vista)|Sim|
 
 ### Recursos
 
