ADD json Post transaction

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -946,26 +946,23 @@ Exemplo de requisição:
 
 ```json
 {
-    "transaction_type": "PAYMENT",
-    "status": "CONFIRMED",
-    "Terminal_number": "77102XXX",
-    "card": {
-        "brand": "VISA",
-        "mask": "1234",
-        "bin": "490172",
-        "last": "7897"
-    },
-    "number": "1234589",
-    "authorization_code": "22388292",
-    "payment_product": {
-        "number": 928282,
-        "name": "CREDITO",
-        "sub": {
-            "number": 928282,
-            "name": "A VISTA"
-        }
-    },
-    "amount": 5151
+	"id": "442bbdbe-41c8-4e22-83ee-e1a849ed3cb5",
+	"external_id": "0b37f0d8-017a-4b11-91b9-ec1bb3e8fed3",
+	"status": "CONFIRMED",
+	"terminal_number": "12345678",
+	"authorization_code": "008619",
+	"number": "672836",
+	"amount": 2000,
+	"transaction_type": "PAYMENT",
+	"payment_fields": {
+		"primary_product_name": "CREDITO",
+		"secondary_product_name": "A VISTA",
+		"number_of_quotas": 0
+	},
+	"card": {
+		"brand": "VISA",
+		"mask": "************5487"
+	}
 }
 ``` 
 
