--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1010,32 +1010,27 @@ Dados de saída:
 Exemplo de resposta:
 
 ```json
-[{
-    "id": "ede8f84a8b8645cb8e576a593c25c6ed",
-    "external_id": "40578a65-939e-4613-b8c1-9e7358c6c256",
-    "transaction_type": "PAYMENT",
-    "status": "CONFIRMED",
-    "terminal_number": "928273921",
-    "card": {
-        "brand": "VISA",
-        "bin": "490172",
-        "last": "7897"
-    },
-    "number": "1234589",
-    "authorization_code": "22388292",
-    "payment_product": {
-        "number": 928282,
-        "name": "CREDITO",
-        "sub": {
-            "number": 928282,
-            "name": "A VISTA"
-        }
-    },
-
-    "amount": 5000,
-    "created_at": "20151020T13:13:29.000Z",
-    "updated_at": "20151022T12:13:29.000Z"
-}]
+[
+{
+  "id": "442bbdbe-41c8-4e22-83ee-e1a849ed3cb5",
+  "external_id": "0b37f0d8-017a-4b11-91b9-ec1bb3e8fed3",
+  "status": "CONFIRMED",
+  "terminal_number": "77102648",
+  "authorization_code": "008619",
+  "number": "672836",
+  "amount": 2000,
+  "transaction_type": "PAYMENT",
+  "payment_fields": {
+  "primary_product_name": "CREDITO",
+  "secondary_product_name": "A VISTA",
+    "number_of_quotas": 0
+  },
+  "card": {
+    "brand": "VISA",
+    "mask": "************3542"
+  }
+}
+]
 ```
 
 ### Fluxo Básico Utilização API Order manager Cielo LIO
