Add cancelar pedido

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1033,6 +1033,82 @@ Exemplo de resposta:
 ]
 ```
 
+#### Cancelar Pedidos
+
+O cancelamento de pedidos é realizado apenas através da Cielo LIO.
+Selecione a função Cancelamento de Vendas e digite o CNPJ da empresa (o mesmo que pode ser visualizado através do comprovante de pagamento). O sistema irá solicitar a senha para realização da operação, que pode ser obtida através de abertura de ticket na página de Suporte do Portal de desenvolvedores.
+Siga todos os passos indicados nas telas seguintes para o cancelamento da venda. É importante salientar que um cancelamento só pode ser realizado em ser valor integral.
+
+#### GET -  Consultar as transações canceladas de um pedido
+
+Esse recurso é utilizado para obter as informações de todas as transações canceladas em um pedido. O id do pedido é utilizado para realizar a chamada.
+Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO a transactions será adicionada automaticamente no pedido juntamente com a transaction do pagamento original.
+
+> Endpoint:
+> 
+> **GET** /orders/<id>/transactions
+
+Dados de entrada:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|id|path parameter|Identificador do pedido.|Sim|
+
+Exemplo de requisição:
+
+> **GET** https://api.cielo.com.br/order-management/v1/orders/c393ce9f-3741-413f-8ad5-2f142eaed51f/transactions
+
+Dados de saída:
+
+|Campo|Tipo|Descrição|Obrigatório|
+|-----|----|---------|-----------|
+|transactions|Lista (Transaction)|Lista de transações de um pedido.|SIM|
+
+Exemplo de resposta:
+
+```json
+[
+  {
+    "id": "46019c39-989e-46e9-aa7d-d8e9414396b4",
+    "external_id": "95185.99407021694",
+    "status": "CONFIRMED",
+    "terminal_number": "77102648",
+    "authorization_code": "008619",
+    "number": "672837",
+    "amount": 2000,
+    "transaction_type": "CANCELLATION",
+    "payment_fields": {
+    "primary_product_name": "CREDITO",
+    "secondary_product_name": "A VISTA",
+    "number_of_quotas": 0
+  },
+    "card": {
+      "brand": "VISA",
+      "mask": "************3542"
+    }
+  },
+  {
+    "id": "442bbdbe-41c8-4e22-83ee-e1a849ed3cb5",
+    "external_id": "0b37f0d8-017a-4b11-91b9-ec1bb3e8fed3",
+    "status": "CONFIRMED",
+    "terminal_number": "77102648",
+    "authorization_code": "008619",
+    "number": "672836",
+    "amount": 2000,
+    "transaction_type": "PAYMENT",
+    "payment_fields": {
+    "primary_product_name": "CREDITO",
+    "secondary_product_name": "A VISTA",
+    "number_of_quotas": 0
+   },
+    "card": {
+    "brand": "VISA",
+    "mask": "************3542"
+    }
+  }
+]
+```
+
 ### Fluxo Básico Utilização API Order manager Cielo LIO
 
 Abaixo você encontra um fluxo básico para enviar um pedido para a Cielo LIO utilizando a Integração Remota:
