Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-faq-api-3.0.md
@@ -191,7 +191,7 @@ Mais informações em: https://github.com/DeveloperCielo
 ## 24. A API Cielo eCommerce aceita pagamento com diferentes moedas e cartões internacionais?
 
 * **Moedas**:No momento a API Cielo eCommerce aceita somente transações em Reais (R$/BRL).
-* **Cartões internacionais**: Sim, a API aceita cartãoes internacionais, mas as transações são processadas em Reais (R$/BRL).
+* **Cartões internacionais**: Sim, a API aceita cartãoes internacionais, mas as transações são processadas em Reais (R$/BRL) e transações parceladas são negadas pelo emissor do cartão.
 
 **OBS**: Cartões internacionais não podem realizar parcelamento.
 
