--- a/_i18n/pt/_posts/edi/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/edi/2017-11-30-edi.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial
-title:  Manual EDI
+title:  Manual de integração
 description: Instruções EDI
 toc_footers: true
 categories: tutorial
