Updated '_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md' via CloudCannon

--- a/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
+++ b/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
@@ -1,46 +1,34 @@
 ---
 layout: tutorial
-title:  SDKs
-description: Lista de Sdks Api cielo ecommerce
+title:  Postman Cielo
+description: O Postman é um API Client que facilita aos desenvolvedores criar, compartilhar, testar e documentar APIs.
+search: true
 toc_footers: true
-translated: true
 categories: tutorial
-sort_order: 5
 tags:
-  - API e-Commerce Cielo
-  - Webservice 1.5
-  - Cielo LIO
+  - Additional Documentation
 ---
 
-# SDKs Api e-Commerce Cielo
+# What is POSTMAN?
 
-|SDK Mobile                                                        |                                                                  |
-|------------------------------------------------------------------|------------------------------------------------------------------|
-|[**Android**](https://github.com/DeveloperCielo/API-3.0-Android)  |[**iOS**](https://github.com/DeveloperCielo/API-3.0-iOS)          |
+Postman is an API client that makes it easy for developers to create, share, test, and document APIs. This is done by allowing users to create and save simple and complex ** HTTP and HTTP ** requests as well as read their responses.
 
-|SDK                                                               |
-|------------------------------------------------------------------|
-|[**PHP**](https://github.com/DeveloperCielo/API-3.0-PHP)          |
-|[**JAVA**](https://github.com/DeveloperCielo/API-3.0-Java)        |
-|[**Python**](https://github.com/DeveloperCielo/API-3.0-Python)    |
-|[**Ruby**](https://github.com/DeveloperCielo/API-3.0-Ruby)        |
+# Why use POSTMAN?
 
-# SDKs Cielo LIO
+In addition to the practicality of having all the integration examples and codes ready, POSTMAN is the official test tool for Cielo's development and support teams. This way, when integrating, if you have doubts, it will be faster and simpler to confirm what may be happening with your code.
 
-| Tipo                 | SDK                                                                                                 |
-|----------------------|-----------------------------------------------------------------------------------------------------|
-| **Sample**           | [**Integração Local**](https://github.com/DeveloperCielo/LIO-SDK-Sample-Integracao-Local)           |
-| **Order Management** | [**Integração Local**](https://github.com/DeveloperCielo/order-management)                          |
-| **Android**          | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android) |
-| **PHP**              | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP)     |
-| **Java**             | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)    |
-| **CSharp**           | [**Integração Remota**](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  |
+**Other advantages of POSTMAN**:
 
-# SDKs Webservice 1.5
+* Free tool
+* No need to install EXE - it's an extension of Google Chrome
+* Works on any platform: Windows, MacOS and Linux
+* Converts JSON into several languages (EX: Python, PHP, Ruby)
+* Synchronization between various applications
+* Synchronize code between teams (Paid version)
 
-|SDK                                                                      |
-|-------------------------------------------------------------------------|
-|[**CSharp**](https://github.com/DeveloperCielo/Webservice-1.5-csharp)    |
-|[**PHP**](https://github.com/DeveloperCielo/Webservice-1.5-php)          |
-|[**JAVA**](https://github.com/DeveloperCielo/Webservice-1.5-java)        |
-|[**Ruby**](https://github.com/DeveloperCielo/Webservice-1.5-ruby)        |
+# Download and register
+
+To use Postman, simply install the APP on your computer. This can be done in two ways:
+
+* **Installing the desktop version**: Just go to <https://www.getpostman.com/>, download the version for your platform and install the executable
+* **Installing the Chrome extension**: Just go to the Chrome Store and install the Postman extension
