Updated '_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md' via CloudCannon

--- a/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
+++ b/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
@@ -32,3 +32,22 @@ To use Postman, simply install the APP on your computer. This can be done in two
 
 * **Installing the desktop version**: Just go to <https://www.getpostman.com/>, download the version for your platform and install the executable
 * **Installing the Chrome extension**: Just go to the Chrome Store and install the Postman extension
+
+## Installing the Chrome extension
+
+1.Go to the Chrome Store, search for POSTMAN in APPs
+
+![]({{site.baseurl_root}}/images/additional documents/tutorial-postman/p1.png)
+
+2. At the App's tab, in your Google Chrome, go to the Postman icon
+
+![]({{site.baseurl_root}}/images/p2.png)
+
+3. When accessing Postman for the first time,a login account will be requested. This step is optional.
+If you choose to creat an account, It will synchronize your settings and APIs through any device where a Postman instance is running with the same account  
+
+![]({{site.baseurl_root}}/images/p3.png)
+
+4. Set up your Collections and environments to start testing
+
+![]({{site.baseurl_root}}/images/p4.png)
