Updated '_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md' via CloudCannon

--- a/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
+++ b/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
@@ -51,3 +51,34 @@ If you choose to creat an account, It will synchronize your settings and APIs th
 4. Set up your Collections and environments to start testing
 
 ![]({{site.baseurl_root}}/images/p4.png)
+
+# Explaining POSTMAN Components
+
+In this area we will explain the different components of the Postman and its functions. After this introduction, the next parts of this tutorial will focus on the settings for API testing
+
+![]({{site.baseurl_root}}/images/pc.png)
+
+**A** - **Environment**:
+Environment to which requests will be directed. In this area, data will be defined as:
+
+Description |
+| --- | --- |
+| **MerchantId** | Store ID on Sky APIs |
+| **MerchantKey** | Store Security Key at Sky APIs |
+| **POST / PUT URL** | Endpoint To create or edit transactions |
+| **GET URL** | Endpoint for Querying Transactions |
+
+We suggest creating two environments, one with production data and another Sandbox, each with its own credentials and URLs.
+In this way it becomes much simpler to perform tests with the same contract for both environments.
+
+**B** - **Header**
+
+Here is the MerchantId / MerchantKey, which by default uses the same data registered in `Environment`.
+
+**C** - **Body**:
+It is the content of the Requisitions. Here is where you can change or create examples for the API and validate the contents of your `POST` /` GET` / `PUT`
+
+**D** - **Collection**:
+
+Location that contains all examples and codes that can be used in the API. Here are the transactions, queries, and other features that exist in the Sky APIs.
+The number of collections is unlimited, meaning you can create multiple collections to fit your Postman style of use.
