--- a/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
+++ b/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
@@ -80,5 +80,24 @@ It is the content of the Requisitions. Here is where you can change or create ex
 
 **D** - **Collection**:
 
-Location that contains all examples and codes that can be used in the API. Here are the transactions, queries, and other features that exist in the Sky APIs.
+Location that contains all examples and codes that can be used in the API. Here are the transactions, queries, and other features that exist in the Cielo's APIs.
 The number of collections is unlimited, meaning you can create multiple collections to fit your Postman style of use.
+
+## Creating Environment Heaven
+
+The first step in using postman is the creation of the API environment. This setting will define which credentials and endpoints will be used by default, thus avoiding the need to perform configurations for each test.
+
+### **Creating the environment**:
+
+1 - In the upper right corner, click on the gear and select "Manage environment".
+
+![]({{site.baseurl_root}}/images/p7.png)
+
+2 - In the management screen, just fill in the settings according to the screen below:
+
+![]({{site.baseurl_root}}/images/p8.png)
+
+3 - Now the endpoints and credentials for tests are already registered. We suggest you create two environments: `Production` and `Sandbox`.
+
+> In the **Cielo Cielo Ecommerce** credentials, `MerchantID` and` MerchantKey`, must match the URL environment, that is, Sandbox credentials only work with Sandbox URLs
+> The **Checkout Cielo** has no `MerchantKey` or a sandbox environment. To perform tests, the **"Test Mode"** must be activated. For more information about Test Mode, access the [Backoffice Tutorial](https://developercielo.github.io/Checkout-Backoffice/).
