Updated '_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md' via CloudCannon

--- a/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
+++ b/_i18n/en/_posts/documentos-adicionais/2003-03-03-postman.md
@@ -101,3 +101,105 @@ The first step in using postman is the creation of the API environment. This set
 
 > In the **Cielo Cielo Ecommerce** credentials, `MerchantID` and` MerchantKey`, must match the URL environment, that is, Sandbox credentials only work with Sandbox URLs
 > The **Checkout Cielo** has no `MerchantKey` or a sandbox environment. To perform tests, the **"Test Mode"** must be activated. For more information about Test Mode, access the [Backoffice Tutorial](https://developercielo.github.io/Checkout-Backoffice/).
+
+## Importing a Collection
+
+Cielo has standard collections for its APIs. 
+You can import them directly into your POSTMAN and have all the examples ready to use instantly, without the need to copy them directly from our manuals.
+
+Follow the steps below:
+
+1. Access the area of the manual where the Collection link is available.Copy it.
+
+**IMPORTANT:** In order for your collection to always be up to date, we suggest you always look for the latest version of the collection in the manual.  IMPORTED COLLECTIONS DOES NOT HAVE AUTOMATICAL UPDATES
+
+2. With Postman opened, use the IMPORT button, and select the "IMPORT FROM LINK" option.
+
+![]({{site.baseurl_root}}/images/p5.png)
+
+3. Your Cielo collection is now available. Just select Environment and the requisition. By clicking on SEND, Postman will execute communication with Cielo.
+
+![]({{site.baseurl_root}}/images/p6.png)
+
+## Collections and Environments Cielo
+
+Below, we list the collections and Environments Cielo. Use them in your Postman to perform tests and integrations.
+
+### Api Cielo Ecommerce
+
+* **Collection** - <https://www.getpostman.com/collections/139520c8fe2210654d7c>
+
+Privacy Policy |
+| --- | --- |
+| Sandbox | ** Transaction submission **: https://apisandbox.cieloecommerce.cielo.com.br <br> ** Transaction query **: https: //apiquerysandbox.cieloecommerce.cielo.com.br/ |
+| Production | ** Transaction submission **: https://api.cieloecommerce.cielo.com.br/ <br> ** Transaction query **: https: //apiquery.cieloecommerce.cielo.com.br/ |
+
+### Checkout Cielo
+
+* **Collection** - <https://www.getpostman.com/collections/97969ec643738aac42f4>
+
+Privacy Policy |
+| --- | --- |
+| Production | **Transaction submission**: https: //cieloecommerce.cielo.com.br/api |
+
+# Making a requisition
+
+With its Collection and Environmet configured, creating a transaction with Cielo is extremely easy:
+
+![]({{site.baseurl_root}}/images/pr.png)
+
+1. Select which request you want to use.
+2. Verify that the correct Environment is selected
+3. Click SEND.
+4. At the bottom you will see 2 information:
+
+* `Response Body` - Here is where the data returned from your transactions are listed
+* `HTTP Status` - Here you check if your request worked.
+
+**OBS**: If you do not receive a response, check the HTTP status.
+
+## Generating examples in other languages.
+
+POSTMAN allows you to create examples of other languages based on the JSON requests for Cielo products.
+
+Below we show how to generate an example in Python
+
+1 - Access the request you want to convert and click `CODE` in the right corner of the screen.
+
+*OBS*: If this link does not exist on your screen, click `Params`
+
+![]({{site.baseurl_root}}/images/p10.png)
+
+2 - Select the language you want to convert, in this case, Python.
+
+![]({{site.baseurl_root}}/images/pcode.png)
+
+3 - The Json sample is converted to Python
+
+![]({{site.baseurl_root}}/images/pcode2.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
